# alignlib

./: AUTHORS  Makefile.am  NEWS  README  acinclude.m4  build.xml  config.h.in  configure.in  reconf
alignlib/: Alignandum.h  Alignator.h  Alignatum.h  AlignlibBase.cpp  AlignlibBase.h  AlignlibDefault.cpp  AlignlibException.cpp  AlignlibException.h  AlignlibIndex.h  Alignment.cpp  Alignment.h  AlignmentFormat.cpp  AlignmentFormat.h  AlignmentIterator.h  DistanceMatrix.h  Distor.h  Encoder.h  Fragmentor.h  HelpersAlignandum.h  HelpersAlignatum.h  HelpersAlignment.cpp  HelpersAlignment.h  HelpersMultAlignment.h  HelpersMultipleAlignment.cpp  HelpersMultipleAlignment.h  HelpersProfile.cpp  HelpersRegularizor.h  HelpersRenderer.cpp  HelpersSequence.cpp  HelpersToolkit.h  HelpersTree.h  HelpersTreetor.h  ImplAlignandum.cpp  ImplAlignandum.h  ImplAlignator.cpp  ImplAlignator.h  ImplAlignatorDP.cpp  ImplAlignatorDPFull.cpp  ImplAlignatorDPFull.h  ImplAlignatorDiagonalDotsSquared.cpp  (+133 more)
bench/: Makefile.am  bench_Alignata  bench_Alignata.cpp  bench_Alignator.cpp  bench_Alignment.cpp
cython/: test_alignlib.py
cython/alignlib_src/.svn/: entries
doc/: Makefile.am  doxygen.cfg  main_page
m4/: ac_python_devel.m4  ax_boost_python.m4
python/: Jamroot  Makefile.am  _alignlib.cpp  alignlib.cpp  alignlib.py  build.py  build_alignlib.py  calignlib.cpp  exposed_decl.pypp.txt  includes.h  setup.py  setup.py.in  test.py
python/alignlib/: __init__.py
python/bench/: bench_Alignment.py
python/lib/: __init__.py
python/modules/: Alignandum.pypp.cpp  Alignator.pypp.cpp  Alignator.pypp.hpp  Alignatum.pypp.cpp  AlignatumVector.pypp.cpp  AlignatumVector.pypp.hpp  AlignlibBase.pypp.cpp  AlignlibBase.pypp.hpp  Alignment.pypp.cpp  AlignmentFormat.pypp.cpp  AlignmentFormat.pypp.hpp  AlignmentFormatBlocks.pypp.cpp  AlignmentFormatDiagonals.pypp.cpp  AlignmentFormatDiagonals.pypp.hpp  AlignmentFormatEmissions.pypp.cpp  AlignmentFormatEmissions.pypp.hpp  Coordinate.pypp.hpp  CountVector.pypp.cpp  CountVector.pypp.hpp  DistanceMatrix.pypp.cpp  Distor.pypp.cpp  Distor.pypp.hpp  EVDParameters.pypp.cpp  Encoder.pypp.cpp  Encoder.pypp.hpp  Fragmentor.pypp.cpp  Iterator2D.pypp.cpp  Iterator2D.pypp.hpp  LogOddor.pypp.cpp  MatrixDouble.pypp.cpp  MatrixDouble.pypp.hpp  MatrixInt.pypp.cpp  MatrixUInt.pypp.cpp  MultAlignment.pypp.cpp  MultAlignment.pypp.hpp  MultAlignmentFormat.pypp.cpp  MultAlignmentFormat.pypp.hpp  MultAlignmentFormatPlain.pypp.cpp  MultAlignmentFormatPlain.pypp.cpp~  MultAlignmentFormatPlain.pypp.hpp  (+36 more)
python/tests/: test_Alignandum.py  test_Alignata.py  test_Alignator.py  test_AlignedBlocks.py  test_AlignlibException.py  test_Alignment.py  test_AlignmentFormat.py  test_HelpersAlignata.py  test_HelpersAlignment.py  test_Matrix.py  test_MultAlignment.py  test_MultipleAlignator.py  test_Regularizor.py  test_SubstitutionMatrix.py  test_Weightor.py
src/: AlignException.cpp  AlignException.h  AlignLibMethods.h  Alignandum.cpp  Alignandum.h  Alignata.cpp  Alignata.h  AlignataIterator.cpp  AlignataIterator.h  Alignator.cpp  Alignator.h  Alignatum.h  AlignedBlocks.cpp  AlignedBlocks.h  AlignlibDebug.cpp  AlignlibDebug.h  AlignlibDefault.cpp  AlignlibException.h  Alignment.cpp  Alignment.h  AlignmentFormat.cpp  AlignmentFormat.h  AlignmentIterator.cpp  AlignmentIterator.h  DistanceMatrix.cpp  DistanceMatrix.h  Distor.cpp  Distor.h  Dottor.h  Encoder.cpp  Encoder.h  Fragmentor.cpp  Fragmentor.h  HelpersAlignandum.cpp  HelpersAlignandum.h  HelpersAlignata.cpp  HelpersAlignata.h  HelpersAlignataPrivate.cpp  HelpersAlignator.cpp  HelpersAlignator.h  (+296 more)
tests/: .project  AUTHORS  Makefile  Makefile.am  Makefile.in  test_Alignandum.cpp  test_Alignata.cpp  test_Alignator.cpp  test_AlignatorDots.cpp  test_Alignatum.cpp  test_AlignedBlocks.cpp  test_AlignlibException.cpp  test_Alignment.cpp  test_AlignmentFormat.cpp  test_Defaults.cpp  test_Distor.cpp  test_Encoder.cpp  test_Fragmentor.cpp  test_HelpersAlignandum.cpp  test_HelpersAlignata.cpp  test_HelpersAlignment.cpp  test_Index.cpp  test_IterativeAlignment.cpp  test_Iterator.cpp  test_LogOddor.cpp  test_Matrix.cpp  test_MultAlignment.cpp  test_MultAlignmentFormat.cpp  test_MultipleAlignator.cpp  test_MultipleAlignment.cpp  test_MultipleAlignmentFormat.cpp  test_PhyloMatrix.cpp  test_Profile.cpp  test_Regularizor.cpp  test_Statistics.cpp  test_SubstitutionMatrix.cpp  test_Translator.cpp  test_Tree.cpp  test_Treetor.cpp  test_Weightor.cpp
tests/data/: BLOSUM62  test_index.data
